# zkorage

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.ab.yml  docker-compose.preview.yml  docker-compose.yml
contract/: .accredited_id.testnet  .bond_gate_id.testnet  .bond_token_id.testnet  .compliance_id.testnet  .escrow_id.testnet  .fundraise_id.testnet  .fundraise_wasm_hash.testnet  .payroll_id.testnet  .solvency_gate_id.testnet  .solvency_gate_wasm_hash.testnet  .tier_gate_id.testnet  Cargo.toml  deployment.testnet.json  proof_fixture.txt
contract/contracts/accredited/: Cargo.toml
contract/contracts/accredited/src/: lib.rs  test.rs
contract/contracts/accredited/test_snapshots/test/: test_add_issuer_then_grant.1.json  test_claim_type_mismatch.1.json  test_empty_state.1.json  test_happy_path_grants.1.json  test_history_appends_and_paginates.1.json  test_is_granted_expires.1.json  test_proof_invalid.1.json  test_regrant_same_accessor.1.json  test_rejection_does_not_append.1.json  test_remove_issuer_then_reject.1.json  test_set_image_id_changes_pin.1.json  test_set_verifier_repoint.1.json  test_upgrade_rejects_non_admin.1.json
contract/contracts/bond-gate/: Cargo.toml
contract/contracts/bond-gate/src/: lib.rs  test.rs
contract/contracts/bond-gate/test_snapshots/test/: test_admin_requires_auth.1.json  test_admin_set_image_and_verifier.1.json  test_bad_min_amount_rejected.1.json  test_deadline_passed_rejected_on_submit.1.json  test_different_requirement_distinct_grant.1.json  test_double_initialize_rejected.1.json  test_history_paginates.1.json  test_is_granted_expires_at_deadline.1.json  test_malformed_journal.1.json  test_nullifier_reuse_rejected.1.json  test_open_context_mismatch_rejected.1.json  test_open_deadline_passed_rejected.1.json  test_open_happy_then_is_open_granted.1.json  test_open_image_not_set_rejected.1.json  test_open_independent_from_bond_path.1.json  test_open_min_amount_zero_rejected.1.json  test_open_nullifier_reuse_rejected.1.json  test_permissionless_submit.1.json  test_proof_invalid.1.json  test_qual_ring_accepts_recent_after_rotation.1.json  test_qual_ring_drops_oldest_beyond_cap.1.json  test_reads_empty.1.json  test_set_qual_root_idempotent_head.1.json  test_submit_happy_then_is_granted_for.1.json  test_three_anonymous_grants_unlinkable.1.json  test_upgrade_rejects_non_admin.1.json
contract/contracts/compliance/: Cargo.toml
contract/contracts/compliance/src/: lib.rs  test.rs
contract/contracts/compliance/test_snapshots/test/: test_add_issuer_then_grant.1.json  test_empty_state.1.json  test_happy_path_grants.1.json  test_history_appends_and_paginates.1.json  test_is_granted_expires.1.json  test_is_granted_revoked_by_set_deny_root.1.json  test_proof_invalid.1.json  test_regrant_same_accessor.1.json  test_rejection_does_not_append.1.json  test_remove_issuer_then_reject.1.json  test_set_deny_root_changes_pin.1.json  test_set_deny_root_requires_auth.1.json  test_set_image_id_changes_pin.1.json  test_set_verifier_repoint.1.json  test_upgrade_rejects_non_admin.1.json
contract/contracts/dataroom/: Cargo.toml
contract/contracts/dataroom/src/: lib.rs  test.rs
contract/contracts/dataroom/test_snapshots/test/: test_admin_set_verifier_and_image.1.json  test_admission_broken_gate_fail_closed.1.json  test_admission_denied_missing_accredited.1.json  test_admission_denied_missing_compliance.1.json  test_admission_denied_no_membership.1.json  test_admission_membership_only_policy.1.json  test_admission_recipient_pub_membership_fallback.1.json  test_bond_leg_admits_without_dr2_grant.1.json  test_bond_leg_denies_wrong_member_root.1.json  (+85 more)
contract/contracts/escrow/: Cargo.toml
contract/contracts/escrow/src/: lib.rs  test.rs
contract/contracts/fundraise/: Cargo.toml
contract/contracts/fundraise/src/: lib.rs  test.rs
contract/contracts/gate/: Cargo.toml
contract/contracts/gate/src/: lib.rs  test.rs
contract/contracts/groth16-verifier/: parameters.json
contract/contracts/groth16-verifier/src/: lib.rs  test.rs
contract/contracts/payroll/: Cargo.toml
contract/contracts/payroll/src/: lib.rs  test.rs
contract/contracts/policy/: Cargo.toml
contract/contracts/policy/src/: lib.rs  test.rs
contract/contracts/solvency-gate/: Cargo.toml
contract/contracts/solvency-gate/src/: lib.rs  test.rs
contract/contracts/tier-gate/: Cargo.toml
contract/contracts/tier-gate/src/: lib.rs  test.rs
contract/contracts/token/: Cargo.toml
contract/contracts/token/src/: lib.rs  test.rs
contract/scripts/: deploy.sh  deploy_accredited.sh  deploy_bond_gate.sh  deploy_compliance.sh  deploy_dataroom.sh  deploy_escrow.sh  deploy_fundraise.sh  deploy_gate.sh  deploy_payroll.sh  deploy_policy.sh  deploy_solvency_gate.sh  deploy_tier_gate.sh  deploy_token.sh  measure.sh  repin_v5.sh  upgrade_bondonly.sh  upgrade_dataroom_bond.sh  upgrade_dataroom_dr5.sh
prover/host/: Cargo.toml
prover/host/src/: lib.rs  main.rs
prover/methods/: Cargo.toml  build.rs
prover/methods/guest/: Cargo.toml
prover/methods/guest-accredited/: Cargo.toml
prover/methods/guest-accredited/src/: main.rs
prover/methods/guest-bond/: Cargo.toml
prover/methods/guest-bond-open/: Cargo.toml
prover/methods/guest-bond-open/src/: main.rs
prover/methods/guest-bond/src/: main.rs
prover/methods/guest-compliance/: Cargo.toml
prover/methods/guest-compliance/src/: main.rs
prover/methods/guest-dataroom-seal/: Cargo.toml
prover/methods/guest-dataroom-seal/src/: main.rs
prover/methods/guest-docauth/: Cargo.toml
prover/methods/guest-docauth/src/: main.rs
prover/methods/guest-identity/: Cargo.toml
prover/methods/guest-identity/src/: main.rs
prover/methods/guest-membership/: Cargo.toml
prover/methods/guest-membership/src/: main.rs
prover/methods/guest-payroll/: Cargo.toml
prover/methods/guest-payroll/src/: main.rs
prover/methods/guest-solvency/: Cargo.toml
prover/methods/guest-solvency/src/: main.rs
prover/methods/guest-tier/: Cargo.toml
prover/methods/guest-tier/src/: main.rs
prover/methods/guest/src/: main.rs
(+466 files in other folders)
