[package]
name = "fundraise"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
risc0-interface = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real accredited gate — the de-risk integration test cross-calls the ACTUAL contract (not a mock).
accredited = { path = "../accredited" }
