[package]
name = "solvency-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
risc0-interface = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real escrow + token — the de-risk integration test cross-calls the ACTUAL escrow's get_lock (not a mock),
# proving the live `is_locked` self-void composes end-to-end across the two contracts.
escrow = { path = "../escrow" }
token = { path = "../token" }
