[package]
name = "bond_open_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# ed25519-dalek verifies the NEW-5 in-guest holder signature (accessor-auth, binds recipient_pub) —
# precompile-accelerated.
ed25519-dalek = { version = "2", default-features = false }
# sha2 powers the ONE depth-20 Merkle tree (qualifying-lock set) + the nullifier (sha256 precompile). No
# member tree here (bond-only = no membership), no x25519 (the recipient_pub is committed verbatim, not used
# to seal in-guest), so the image_id reproduces cross-machine (W8 finding).
sha2 = "0.10"

# RISC Zero acceleration patches (same set the production guests use). Changing this guest changes its
# image_id but NOT the verifier (image-agnostic) — no redeploy.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
