[package]
name = "compliance_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# ed25519-dalek verifies the KYC provider's signed identity credential in-guest (same as Week 5).
ed25519-dalek = { version = "2", default-features = false }
# sha2 hashes the sanctions deny-list Indexed-Merkle-Tree non-membership path in-guest.
sha2 = "0.10"

# RISC Zero acceleration patches. Changing the guest changes its image_id but NOT the verifier
# (image-agnostic) — no redeploy.
[patch.crates-io]
# Precompile-accelerated curve25519 (ed25519) — slashes the in-guest ed25519 cycle count.
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
# curve25519-dalek's risc0 backend imports `crypto_bigint::risc0` — pull the accelerated fork too.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
# sha256 precompile — the WHOLE point of choosing SHA-256 for the Merkle tree (1 segment vs 28 for
# Poseidon-BN254, measured). Also accelerates ed25519's internal sha512 as a bonus.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
