[package]
name = "dataroom_seal_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# sha2 powers the ECIES KDF/keystream + the faithful integrity tag (sha256 precompile — cheap).
sha2 = "0.10"
# x25519-dalek performs the in-guest ECDH-to-recipient (faithful seal of the document key). Picks up the
# risc0 curve25519-dalek precompile patch below (same as W7 payroll: ~1-1.5 segments per scalar mult).
x25519-dalek = { version = "2", default-features = false }

# RISC Zero acceleration patches (same set the production guests use). Changing this guest changes its
# image_id but NOT the verifier (image-agnostic) — no redeploy.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
