[package]
name = "docauth_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# crypto-bigint powers the RSA-2048 PKCS#1 v1.5 verification modexp (m = s^65537 mod n) — the genuinely
# new load-bearing ZK for DR4. The risc0 fork accelerates the 2048-bit limb mulmod the modexp is built
# from (the DR1 Ch0 de-risk measured 22 segments via square-and-multiply with this fork; crypto-bigint's
# constant-time full-width `pow` would be 329 segments — we MUST use square-and-multiply, never `pow`).
crypto-bigint = { version = "0.5", default-features = false }
# sha2 hashes the signed statement (msg_digest) and the issuer modulus (issuer_key_hash) — sha256 precompile.
sha2 = "0.10"

# RISC Zero acceleration patches. NO ed25519/x25519 here (RSA + sha256 only), so the canonical Docker
# image_id reproduces cross-machine (the W8 finding) — but we still build canonically on the VM and embed
# that .bin everywhere because the on-chain DataRoom pins `expected_image_id`. Changing this guest changes
# its image_id but NOT the bare verifier (image-agnostic) — no verifier redeploy.
[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
