[package]
name = "membership_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# ed25519-dalek verifies the NEW-5 in-guest holder signature (accessor-auth) — precompile-accelerated.
ed25519-dalek = { version = "2", default-features = false }
# sha2 powers the depth-20 membership Merkle tree + the nullifier (sha256 precompile — ~2 segments total,
# measured in the DR1 Ch0 de-risk). NO x25519/ECIES here, so the image_id reproduces cross-machine (W8
# finding): the key-release ECIES lives off-chain in the DR3 keyper layer, not in this guest.
sha2 = "0.10"

# RISC Zero acceleration patches (same set the production guests use). Changing this guest changes its
# image_id but NOT the verifier (image-agnostic) — no redeploy.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
# curve25519-dalek's risc0 backend imports `crypto_bigint::risc0` — pull the accelerated fork too.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
