[package]
name = "payroll_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# ed25519-dalek verifies the payroll attester's signed salary credential in-guest (same as W1/W5).
ed25519-dalek = { version = "2", default-features = false }
# sha2 powers the ECIES KDF/keystream + the integrity tag (sha256 precompile — cheap).
sha2 = "0.10"
# x25519-dalek performs the in-guest ECDH-to-auditor (Option B selective disclosure). Picks up the
# risc0 curve25519-dalek precompile patch below (Phase-0 measured: ~1-1.5 segments per scalar mult).
x25519-dalek = { version = "2", default-features = false }

# RISC Zero acceleration patches. Changing the guest changes its image_id but NOT the verifier
# (image-agnostic) — no redeploy.
[patch.crates-io]
# Precompile-accelerated curve25519 — slashes BOTH the in-guest ed25519 verify AND the X25519 ECDH.
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
# curve25519-dalek's risc0 backend imports `crypto_bigint::risc0` — pull the accelerated fork too.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
# sha256 precompile.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
