[package]
name = "claim_predicate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# PHASE 0 (risc0-5 GPU smoke): only the 5.x available is 5.0.0-rc.1.
risc0-zkvm = { version = "=5.0.0-rc.1", default-features = false, features = ['std'] }
# ed25519-dalek verifies the issuer's signed claim envelope in-guest.
ed25519-dalek = { version = "2", default-features = false }

# RISC Zero acceleration: replace curve25519-dalek with the precompile-accelerated fork.
# Slashes the in-guest ed25519 cycle count (=> fewer segments => much faster proving).
# Changing the guest changes its image_id but NOT the verifier (image-agnostic) — no redeploy.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
# curve25519-dalek's risc0 backend imports `crypto_bigint::risc0` — pull the accelerated fork too.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
